modal close button icon alignment fixed on mobile

--- a/assets/css/ioda/sass/components/modal/_modal.scss
+++ b/assets/css/ioda/sass/components/modal/_modal.scss
@@ -109,6 +109,7 @@
     justify-content: center;
     align-items: center;
     font-size: 2.4rem;
+    line-height: 2.5rem;
 
     &--table {
       @include button;
